Add research event by id
